SERVER-10688 sync6.js - verify failed in DistributedLock:lock_try

Gracefully give up trying to acquire lock when detected unexpected lock state change.